# scim

./: README.md
model/: .gitignore  README.md
model/pdf2sents/: README.md  poetry.toml  pyproject.toml
model/pdf2sents/pdf2sents/: __main__.py  layout_tools.py  make_output.py  pipeline.py  typed_predictors.py  types.py  visualization.py  word_predictors.py
model/sse_skimming/: .gitignore  README.md  pyproject.toml
model/sse_skimming/scripts/: combine_sse_output.py  run_batch.sh  run_weak_labeling.sh
model/sse_skimming/sse_skimming/: __main__.py  data_programming.py  heuristic_utils.py  predictor.py  word_bank.py
model/sse_skimming/weak_label/: __main__.py  labeling_utils.py  lfs.py  types.py  word_bank.py
reader/: README.md
