[tool.poetry]
name = "pdf2sents"
version = "0.1.3"
description = "A package to turn a PDF paper into a list of sentences"
authors = ["Luca Soldaini <lucas@allenai.org>"]
license = "Apache-2.0"
homepage = "https://github.com/allenai/paper-details-on-demand/tree/main/pdf2sents"
repository = "https://github.com/allenai/paper-details-on-demand/"
readme = "README.md"
packages = [
    { include = "pdf2sents" },
]

[tool.poetry.dependencies]
python = "^3.8"
mmda = {git = "https://github.com/allenai/mmda.git", rev = "0.0.29"}
layoutparser = "0.3.4"
torch = "1.9.0"
torchvision = "0.10.0"
springs = "^1.2.5.3"
cached_path = ">=0.11"
pysbd = ">=0.3.4"
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz"}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.971"
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
