[tool.poetry]
name = "sse-skimming"
version = "0.1.0"
description = ""
authors = ["Luca Soldaini <lucas@allenai.org>"]
license = "Apache-2.0"
homepage = "https://github.com/allenai/paper-details-on-demand/tree/main/sse-skimming"
repository = "https://github.com/allenai/paper-details-on-demand/"
packages = [
    { include = "sse_skimming" }, { include = "weak_label" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
platformdirs = "^2.5.2"
springs = "1.3.1"
pdf2sents = { path = "../pdf2sents/" }
scipy = "^1.8.0"
smashed = "0.1.6"
cached-path = "^1.1.5"
effdet = "^0.3.0"
snorkel = "^0.9.9"
spacy = "^3.4.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.971"
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
